Fixed overlapping in small screen sizes

--- a/styles.css
+++ b/styles.css
@@ -177,7 +177,7 @@ h1 {
 
 .links a {
   color: #fff;
-  font-size: 0.85rem;
+  font-size: 0.75rem;
   font-weight: 600;
 }
 
@@ -483,7 +483,7 @@ p.mv-text {
 .team-members {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 0.5rem 2rem;
+  gap: 0.5rem;
 }
 
 .team-member {
@@ -500,7 +500,7 @@ p.mv-text {
 
 .team-member h4,
 .team-member p {
-  font-size: 14px;
+  font-size: 12px;
   text-align: center;
 }
 
@@ -618,6 +618,10 @@ p.mv-text {
 }
 
 @media screen and (min-width: 570px) {
+  .links a {
+    font-size: 1rem;
+  }
+
   .client-logos img {
     max-width: 125px;
   }
@@ -637,6 +641,7 @@ p.mv-text {
 
   .team-members {
     grid-template-columns: repeat(4, 1fr);
+    gap: 2rem;
   }
 
   .story p {
